--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,10 @@ jobs:
     displayName: 'Build bundle'
   - script: $(fatsDir)/start.sh
     displayName: 'Start FATS'
-  - bash: KUBE_NAMESPACE=default SERVICE_ACCOUNT=default duffle install myriff ${file} --bundle-is-file -s node_port=true -d k8s
+  - bash: |
+      kubectl create clusterrole crd-creator --verb=get,list,create --resource=customresourcedefinitions.apiextensions.k8s.io
+      kubectl create clusterrolebinding crd-creator-binding --clusterrole=crd-creator --serviceaccount=default:default
+      KUBE_NAMESPACE=default SERVICE_ACCOUNT=default duffle install myriff ${file} --bundle-is-file -s node_port=true -d k8s
     displayName: 'Install riff'
   - bash: ./ci/run-tests.sh
     displayName: 'Run tests'
@@ -105,6 +108,8 @@ jobs:
       commit=$(git rev-parse HEAD)
       file=riff-bundle-${version}-${commit}.json
       curl -O https://storage.googleapis.com/projectriff/riff-cnab/builds/${file}
+      kubectl create clusterrole crd-creator --verb=get,list,create --resource=customresourcedefinitions.apiextensions.k8s.io
+      kubectl create clusterrolebinding crd-creator-binding --clusterrole=crd-creator --serviceaccount=default:default
       KUBE_NAMESPACE=default SERVICE_ACCOUNT=default duffle install myriff ${file} --bundle-is-file -s node_port=true -d k8s
     env:
       COMPOSE_CONVERT_WINDOWS_PATHS: 1
