--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 
 variables:
   fatsDir: '$(system.defaultWorkingDirectory)/../fats'
-  fatsRefspec: 7d0c89c23c21edacd8bbd5ed596bbf93006b2846 # do not merge with this refspec
+  fatsRefspec: dac0129e000dd711a74202ba95d6b547e64d8f66 # projectriff/fats master as of 2019-06-20
   duffleNamespace: kube-system
   duffleServiceAccount: duffle-runtime
 
@@ -62,7 +62,7 @@ jobs:
   - bash: ./ci/fats-fetch.sh $(fatsDir) $(fatsRefspec) projectriff/fats
     displayName: 'Fetch FATS'
   - bash: |
-      $(fatsDir)/install.sh duffle 0.2.0-beta.1
+      $(fatsDir)/install.sh duffle 0.2.0-beta.1%2Bgcp https://storage.googleapis.com/projectriff/internal/duffle/
       $(fatsDir)/install.sh gcloud
       ./ci/stage-bundle.sh
     env:
@@ -100,7 +100,7 @@ jobs:
   - bash: |
       $(fatsDir)/install.sh kubectl
       $(fatsDir)/install.sh riff
-      $(fatsDir)/install.sh duffle 0.2.0-beta.1
+      $(fatsDir)/install.sh duffle 0.2.0-beta.1%2Bgcp https://storage.googleapis.com/projectriff/internal/duffle/
       $(fatsDir)/install.sh gcloud
     displayName: 'Install tools'
     env:
