--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
   - bash: |
       $(fatsDir)/install.sh kubectl
       $(fatsDir)/install.sh riff
-      $(fatsDir)/install.sh duffle
+      $(fatsDir)/install.sh duffle 0.2.0-beta.1-schema
     displayName: 'Install tools'
   - script: duffle init && duffle build .
     displayName: 'Build bundle'
@@ -57,7 +57,7 @@ jobs:
   - bash: ./ci/fats-fetch.sh $(fatsDir) $(fatsRefspec) projectriff/fats
     displayName: 'Fetch FATS'
   - bash: |
-      $(fatsDir)/install.sh duffle
+      $(fatsDir)/install.sh duffle 0.2.0-beta.1-schema
       $(fatsDir)/install.sh gcloud
       ./ci/stage-bundle.sh
     env:
@@ -95,7 +95,7 @@ jobs:
   - bash: |
       $(fatsDir)/install.sh kubectl
       $(fatsDir)/install.sh riff
-      $(fatsDir)/install.sh duffle
+      $(fatsDir)/install.sh duffle 0.2.0-beta.1-schema
       $(fatsDir)/install.sh gcloud
     displayName: 'Install tools'
     env:
