do not check-in duffle.json and cnab/app/kab/manifest.yaml
generated duffle.json and cnab/app/kab/manifest.yaml files with
pinned images, are not checked-in to git.
The built artifact will be the only source of truth for what
files were delivered to the users.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
       $(fatsDir)/install.sh riff
       $(fatsDir)/install.sh duffle
     displayName: 'Install tools'
-  - script: duffle init && duffle build .
+  - script: duffle init && make build
     displayName: 'Build bundle'
   - script: $(fatsDir)/start.sh
     displayName: 'Start FATS'
